<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/Foto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/todo"
        tools:srcCompat="@drawable/craig" />

    <TextView
        android:id="@+id/ETNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/nombre"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/ETEdad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/edad"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/ETGenero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/genero"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/ETEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/email"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/ETLocalidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/localidad"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/ETTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:text="@string/tel_fono"
        android:textColor="@color/black" />

</LinearLayout>